# topoi

./: CONTRIBUTING.md  Cargo.toml  README.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/topoi-cli/: Cargo.toml
crates/topoi-cli/src/: main.rs
crates/topoi-core/: Cargo.toml
crates/topoi-core/benches/: algorithms.rs
crates/topoi-core/src/: algorithms.rs  buffer.rs  clipping.rs  delaunay.rs  envelope.rs  error.rs  geometry.rs  lib.rs  parcel.rs  predicates.rs
crates/topoi-core/tests/: proptest_topoi.rs  topoi_tests.rs
crates/topoi-wasm/: Cargo.toml
crates/topoi-wasm/src/: lib.rs
docs/: index.html
