[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/GeoLang/topoi"
authors = ["GeoLang <tiletopia@proton.me>"]
description = "Topological spatial relationships and operations"
rust-version = "1.85"

[workspace.dependencies]
topoi-core = { path = "crates/topoi-core" }
